examples/test/testpolicy10565.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy10565
  namespace: namespace243
spec:
  podSelector:
    matchLabels:
      key12: value3
      key17: value31
      key7: value9
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key44: value15
          key16: value26
          key14: value33
      podSelector:
        matchLabels:
          key46: value3
          key44: value9
          key14: value44
